# gust

./: Cargo.toml  docker-compose.yaml
migrations/2023-09-21-155416_create_gusts/: down.sql  up.sql
migrations/2023-09-21-220319_alter_gusts_add_title/: down.sql  up.sql
migrations/2023-09-24-080211_alter_gusts_add_language/: down.sql  up.sql
src/: connection.rs  key_service.rs  languages.rs  main.rs  model.rs  schema.rs
templates/: index.html
