[package]
name = "gust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
serde = "1.0.188"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
dotenvy = "0.15"
deadpool-diesel = { version = "0.4.1", features = ["postgres"] }
deadpool = "0.9.5"
diesel_migrations = "2.1.0"
petname = "1.1.3"
